fix: glossary header height on mobile/handling of pagination (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -315,7 +315,6 @@ body.templatestyle {
 
 .glossary-header {
   flex-direction: row-reverse;
-  padding-top: 8rem;
 }
 
 .glossary-header .row {
@@ -3828,6 +3827,7 @@ td.lang-select .row span svg {
 .glossary-paging {
   margin-top:0.6em;
   margin-left:auto;
+  padding-left:4em;
 }
 
 .entry-row, .glossary-paging {
@@ -6060,6 +6060,14 @@ i.i--left.i--lock, i.i--left.i--trash {x
     margin-top: @spacing-rh;
   }
 
+  .glossary-header {
+    padding-top: 7rem;
+  }
+
+  .glossary-list {
+    margin-top:2em;
+  }
+
   .glossaryhead-base {
     padding-top: 0;
     margin-left: @spacing-rh;
@@ -6139,6 +6147,14 @@ i.i--left.i--lock, i.i--left.i--trash {x
     flex-direction: row;
     flex-shrink: 0;
     min-height: 100%;
+  }
+
+  .glossary-header {
+    padding-top: 8rem;
+  }
+
+  .glossary-list {
+    margin-top:1.5em;
   }
 
   .glossaryhead-base {
